--- a/main_page.html
+++ b/main_page.html
@@ -11,16 +11,24 @@
 <body>
 	<div id="header">
 		<div class="left_head">
-			<img class="logo" src="/logo" alt="Logo" width="50px" height="50px">
+			<img class="logo" src="{{logo}}" alt="Logo" width="50px" height="50px">
 			<h4 class="logo_name">Lemmings Company</h4>
 		</div>
 		<div class="right_head">
-			<nav>
+			<!-- <nav>
 				<ul>
-					<li><a class="catalog" href="#Catalog">Каталог</a></li>
-					<li><a class="news">Новости</a></li>
+					<nav>
+						<ul>
+							<li><a class="catalog" href="#Catalog">Каталог</a></li>
+							<li><a class="news">Новости</a></li>
+						</ul>
+					</nav>
+					<li><a class="account" href=""><img src="{{acc}}" width="50px" height="50px"></a></li>
 				</ul>
-			</nav>
+			</nav> -->
+			<a class="account" href=""><img src="{{acc}}" width="50px" height="50px"></a>
+			<a class="catalog" href="#Catalog">Каталог</a>
+			<a class="news">Новости</a>
 		</div>
 	</div>
 	<div id="main">
@@ -28,7 +36,7 @@
 		<div class="list_of_stocks">
 			{% for st in stock %}
 				<div class="stock_rec">
-					<img class="stock_logo" src="/img/sber" alt="sber" width="50px" height="50px">
+					<img class="stock_logo" src="{{image}}" alt="sber" width="50px" height="50px">
 					<a class="stock_link" href="">{{ st }}</a>
 				</div>
 			{% endfor %}
